package modules.music.strategies.core;

import modules.music.structures.UserContextDTO;

public interface UserContextStrategy {
    UserContextDTO getUserContext();
}
